--- a/docs/guides/retired-qpus.ipynb
+++ b/docs/guides/retired-qpus.ipynb
@@ -23,7 +23,7 @@
     "    To retrieve jobs from a retired QPU, see [these instructions.](#retrieve)\n",
     "</Admonition>\n",
     "\n",
-    "## Table of retired QPUs\n",
+    "## Table of retired cloud QPUs\n",
     "\n",
     "| QPU name       | Qubit count | Retirement date (Year - month - day) |\n",
     "| ----------------- | ----------- | --------------- |\n",
