--- a/docs/guides/retired-qpus.ipynb
+++ b/docs/guides/retired-qpus.ipynb
@@ -9,7 +9,7 @@
     ]
    },
    "source": [
-    "# Retired QPUs"
+    "# Retired cloud QPUs"
    ]
   },
   {
@@ -17,7 +17,7 @@
    "id": "2559dcba-8131-4bed-8286-017a13a312e0",
    "metadata": {},
    "source": [
-    "The following IBM&reg; quantum processing units (QPUs) have been retired. For the full list of available QPUs, see the [Compute resources page](https://quantum.cloud.ibm.com/computers).\n",
+    "The following IBM&reg; quantum processing units (QPUs) have been retired. For the full list of available QPUs, see the [Compute resources](https://quantum.cloud.ibm.com/computers) page.\n",
     "\n",
     "<Admonition type=\"note\">\n",
     "    To retrieve jobs from a retired QPU, see [these instructions.](#retrieve)\n",
