--- a/docs/guides/retired-qpus.ipynb
+++ b/docs/guides/retired-qpus.ipynb
@@ -9,7 +9,7 @@
     ]
    },
    "source": [
-    "# Retired QPUs"
+    "# Retired cloud QPUs"
    ]
   },
   {
@@ -17,12 +17,13 @@
    "id": "2559dcba-8131-4bed-8286-017a13a312e0",
    "metadata": {},
    "source": [
-    "The following IBM&reg; quantum processing units (QPUs) have been retired. For the full list of available QPUs, see the [Compute resources page](https://quantum.cloud.ibm.com/computers).\n",
+    "The following IBM&reg; quantum processing units (QPUs) have been retired. For the full list of available QPUs, see the [Compute resources](https://quantum.cloud.ibm.com/computers) page.\n",
     "\n",
     "<Admonition type=\"note\">\n",
     "    To retrieve jobs from a retired QPU, see [these instructions.](#retrieve)\n",
     "</Admonition>\n",
     "\n",
+    "## Table of retired cloud QPUs\n",
     "\n",
     "| QPU name       | Qubit count | Retirement date (Year - month - day) |\n",
     "| ----------------- | ----------- | --------------- |\n",
@@ -81,6 +82,13 @@
     "| ibmq_burlington   | **5**       | 2020-08-31      |\n",
     "| ibmq_london       | **5**       | 2020-08-31      |\n",
     "\n",
+    "## Retired processor families\n",
+    "\n",
+    "- **Canary**: The Canary family comprised small designs containing anywhere from 5 to 16 qubits.\n",
+    "- **Falcon**: The Falcon family of devices offered a valuable platform for medium-scale circuits, and also served as a valuable platform for demonstrating performance and scalability improvements before being pushed onto the larger devices.\n",
+    "- **Egret**: Egret brought the innovations of tunable couplers onto a 33-qubit platform, resulting in faster and higher-fidelity two-qubit gates.\n",
+    "- **Hummingbird**: Using a heavy-hexagonal qubit layout, the Hummingbird family allowed up to 65 qubits.\n",
+    "- **Osprey**: Osprey was nearly quadruple the size of Eagle at 433 qubits. The larger chip sizes required further enhancements to device packaging, as well as custom flex cabling in the cryostat to fit the greater I/O requirements within the same wiring footprint.\n",
     "\n",
     "<span id=\"retrieve\"></span>\n",
     "## Retrieve a job from a retired QPU\n",
