--- a/docs/guides/qpu-information.mdx
+++ b/docs/guides/qpu-information.mdx
@@ -82,7 +82,7 @@ In addition to the data shown in the details section for each QPU, calibration d
 * **Readout length (ns)**: The readout_length specifies the duration of the readout operation for a qubit. It measures the time from the initiation of the measurement pulse to the completion of signal digitization, after which the system is ready for the next operation. Understanding this parameter is crucial for optimizing circuit execution, especially when incorporating mid-circuit measurements.
 * **ID error**:
 * **Single-qubit gate length (ns)**:
-* **RX error**:
+* **RX error** (Heron):
 * **Z-axis rotation (rz) error**:
 * **√x (sx) error**:
 * **Pauli-X error**:
