--- a/docs/tutorials/circuit-transpilation-settings.ipynb
+++ b/docs/tutorials/circuit-transpilation-settings.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Compare transpiler settings\n",
-    "*Usage estimate: under one minute on an Eagle processor (NOTE: This is an estimate only. Your runtime might vary.)*"
+    "*Usage estimate: under one minute on an Eagle r3 processor (NOTE: This is an estimate only. Your runtime might vary.)*"
    ]
   },
   {
