--- a/docs/tutorials/spin-chain-vqe.ipynb
+++ b/docs/tutorials/spin-chain-vqe.ipynb
@@ -8,7 +8,7 @@
    },
    "source": [
     "# Ground-state energy estimation of the Heisenberg chain with VQE\n",
-    "*Usage estimate: Two minutes on an Eagle processor (NOTE: This is an estimate only. Your runtime might vary.)*"
+    "*Usage estimate: Two minutes on an Eagle r3 processor (NOTE: This is an estimate only. Your runtime might vary.)*"
    ]
   },
   {
