--- a/docs/guides/access-instances-platform-apis.mdx
+++ b/docs/guides/access-instances-platform-apis.mdx
@@ -6,6 +6,14 @@ description: Parameters to set when provisioning a Qiskit Runtime service instan
 
 ## Use IBM Cloud Platform APIs to access instances
 
+<Admonition type="note">
+Refer to the IBM Cloud&reg; ResourceController API documentation for more information.
+
+- [Create (provision) a new resource instance](https://cloud.ibm.com/apidocs/resource-controller/resource-controller#create-resource-instance)
+- [Update a resource instance](https://cloud.ibm.com/apidocs/resource-controller/resource-controller#update-resource-instance)
+
+</Admonition>
+
 This guide is for anyone using the IBM Cloud Platform APIs to provision or manage access to instances. It provides details on the parameters you can set when provisioning an instance, as well as the set of extension fields returned when you access an instance.
 
 ## `parameters`
@@ -27,4 +35,4 @@ In the response when provisioning or when getting the details of an instance:
 
 - **instance_limit_seconds** (integer or null, `>= 0`): The limit to set on the instance.
 - **usage_allocation_seconds** (integer or null, `>= 0`): Allotted time for the instance, used by the fair-share scheduler to determine the priority in the queue, based on usage of all QPUs.
-- **backends** (Required; array of list of backends (strings) or array with "ANY" (strings))): the allow-list of names of backends that are available to this instance. Default: `["ANY"]`, means all backends. `[]` means no backends.
+- **backends** (Required; array of list of backends (strings) or array with "ANY" (strings)): the allow-list of names of backends that are available to this instance. Default: `["ANY"]`, means all backends. `[]` means no backends.
