add spelling ignore

--- a/docs/guides/access-instances-platform-apis.mdx
+++ b/docs/guides/access-instances-platform-apis.mdx
@@ -3,6 +3,7 @@ title: Use IBM Cloud Platform APIs to access instances
 description: Parameters to set when provisioning a Qiskit Runtime service instance, and extension fields returned when accessing an instance.
 
 ---
+{/* cspell:ignore ResourceController  */}
 
 ## Use IBM Cloud Platform APIs to access instances
 
