Move links out of headings

--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -60,32 +60,38 @@ The following table documents options from the latest version of `qiskit-ibm-run
   <TabItem value="Estimator" label="Estimator">
 <details>
 <summary>
-### [`default_shots`](/docs/api/qiskit-ibm-runtime/options-estimator-options#default_shots)
+### `default_shots`
 </summary>
 
 The total number of shots to use per circuit per configuration.
 
 **Choices**: Integer >= 0
 **Default**: None
+
+[`default_shots` API documentation](/docs/api/qiskit-ibm-runtime/options-estimator-options#default_shots)
 </details>
 
 <details>
 <summary>
-### [`default_precision`](/docs/api/qiskit-ibm-runtime/options-estimator-options#default_precision)
+### `default_precision`
 </summary>
 
 The default precision to use for any PUB or `run()` call that does not specify one.
 
 **Choices**: Float > 0
 **Default**: 0.015625 (1 / sqrt(4096))
+
+[`default_precision` API documentation](/docs/api/qiskit-ibm-runtime/options-estimator-options#default_precision)
 </details>
 
 <details>
 <summary>
-### [`dynamical_decoupling`](/docs/api/qiskit-ibm-runtime/options-estimator-options#dynamical_decoupling)
+### `dynamical_decoupling`
 </summary>
 
 Control dynamical decoupling error mitigation settings.
+
+[`dynamical_decoupling` API documentation](/docs/api/qiskit-ibm-runtime/options-estimator-options#dynamical_decoupling)
 <details>
 <summary>
 #### `dynamical_decoupling.enable`
@@ -136,8 +142,10 @@ Default: `False`
 
 <details>
 <summary>
-### [`environment`](/docs/api/qiskit-ibm-runtime/options-estimator-options#environment)
+### `environment`
 </summary>
+
+[`environment` API documentation](/docs/api/qiskit-ibm-runtime/options-estimator-options#environment)
 <details>
 <summary>
 #### `environment.callback`
@@ -183,8 +191,10 @@ List of tags.
 
 <details>
 <summary>
-### [`execution`](/docs/api/qiskit-ibm-runtime/options-estimator-options#execution)
+### `execution`
 </summary>
+
+[`execution` API documentation](/docs/api/qiskit-ibm-runtime/options-estimator-options#execution)
 <details>
 <summary>
 #### `execution.init_qubits`
@@ -210,24 +220,29 @@ The delay between a measurement and the subsequent quantum circuit.
 
 <details>
 <summary>
-### [`max_execution_time`](/docs/api/qiskit-ibm-runtime/options-estimator-options#max_execution_time)
+### `max_execution_time`
 </summary>
 **Choices**: Integer number of seconds in the range [1, 10800]
 **Default**: 10800 (3 hours)
+
+[`max_execution_time` API documentation](/docs/api/qiskit-ibm-runtime/options-estimator-options#max_execution_time)
 </details>
 
 <details>
 <summary>
-### [`resilience`](/docs/api/qiskit-ibm-runtime/options-estimator-options#resilience)
+### `resilience`
 </summary>
 Advanced resilience options to fine tune the resilience strategy.
+
+[`resilience` API documentation](/docs/api/qiskit-ibm-runtime/options-estimator-options#resilience)
 <details>
 <summary>
-#### [`resilience.layer_noise_learning`](/docs/api/qiskit-ibm-runtime/options-layer-noise-learning-options)
+#### `resilience.layer_noise_learning`
 </summary>
 
 Options for learning layer noise.
 
+[`resilience.layer_noise_learning` API documentation](/docs/api/qiskit-ibm-runtime/options-layer-noise-learning-options)
 </details>
 
 <details>
@@ -292,11 +307,12 @@ Options for learning layer noise.
 
 <details>
 <summary>
-#### [`resilience.measure_noise_learning`](/docs/api/qiskit-ibm-runtime/options-measure-noise-learning-options)
+#### `resilience.measure_noise_learning`
 </summary>
 
 Options for measurement noise learning.
 
+[`resilience.measure_noise_learning` API documentation](/docs/api/qiskit-ibm-runtime/options-measure-noise-learning-options)
 </details>
 
 <details>
@@ -331,11 +347,12 @@ Options for measurement noise learning.
 
 <details>
 <summary>
-#### [`resilience.measure_noise_learning.pec`](/docs/api/qiskit-ibm-runtime/options-pec-options)
+#### `resilience.measure_noise_learning.pec`
 </summary>
 
 Probabilistic error cancellation mitigation options.
 
+[`resilience.measure_noise_learning.pec` API documentation](/docs/api/qiskit-ibm-runtime/options-pec-options)
 </details>
 
 <details>
@@ -380,12 +397,13 @@ Probabilistic error cancellation mitigation options.
 
 <details>
 <summary>
-#### [`resilience.measure_noise_learning.zne`](/docs/api/qiskit-ibm-runtime/options-zne-options)
+#### `resilience.measure_noise_learning.zne`
 </summary>
 
 **Choices**: `True`, `False`
 **Default**: `False`
 
+[`resilience.measure_noise_learning.zne` API documentation](/docs/api/qiskit-ibm-runtime/options-zne-options)
 </details>
 
 <details>
@@ -432,7 +450,7 @@ Probabilistic error cancellation mitigation options.
 
 <details>
 <summary>
-### [`resilience_level`](/docs/api/qiskit-ibm-runtime/options-estimator-options#resilience_level)
+### `resilience_level`
 </summary>
 
 How much resilience to build against errors. Higher levels generate more accurate results at the expense of longer processing times.
@@ -440,23 +458,27 @@ How much resilience to build against errors. Higher levels generate more accurat
 **Choices**: `0`, `1`, `2`
 **Default**: `1`
 
+[`resilience_level` API documentation](/docs/api/qiskit-ibm-runtime/options-estimator-options#resilience_level)
 </details>
 
 <details>
 <summary>
-### [`seed_estimator`](/docs/api/qiskit-ibm-runtime/options-estimator-options#seed_estimator)
+### `seed_estimator`
 </summary>
 
 **Choices**: Integer
 **Default**: None
 
+[`seed_estimator`](/docs/api/qiskit-ibm-runtime/options-estimator-options#seed_estimator)
 </details>
 <details>
 <summary>
-### [`simulator`](/docs/api/qiskit-ibm-runtime/options-simulator-options)
+### `simulator`
 </summary>
 
 Options to pass when simulating a backend
+
+[`simulator` API documentation](/docs/api/qiskit-ibm-runtime/options-simulator-options)
 <details>
 <summary>
 #### `simulator.basis_gates`
@@ -502,10 +524,12 @@ Options to pass when simulating a backend
 
 <details>
 <summary>
-### [`twirling`](/docs/api/qiskit-ibm-runtime/options-twirling-options)
+### `twirling`
 </summary>
 
 Twirling options
+
+[`twirling` API documentation](/docs/api/qiskit-ibm-runtime/options-twirling-options)
 <details>
 <summary>
 #### `twirling.enable_gates`
@@ -583,21 +607,25 @@ Experimental options, when available.
   <TabItem value="Sampler" label="Sampler">
   <details>
 <summary>
-### [`default_shots`](/docs/api/qiskit-ibm-runtime/options-sampler-options#default_shots)
+### `default_shots`
 </summary>
 
 The total number of shots to use per circuit per configuration.
 
 **Choices**: Integer >= 0
 **Default**: None
+
+[`default_shots` API documentation](/docs/api/qiskit-ibm-runtime/options-sampler-options#default_shots)
 </details>
 
 <details>
 <summary>
-### [`dynamical_decoupling`](/docs/api/qiskit-ibm-runtime/options-sampler-options#dynamical_decoupling)
+### `dynamical_decoupling`
 </summary>
 
 Control dynamical decoupling error mitigation settings.
+
+[`dynamical_decoupling` API documentation](/docs/api/qiskit-ibm-runtime/options-sampler-options#dynamical_decoupling)
 <details>
 <summary>
 #### `dynamical_decoupling.enable`
@@ -648,8 +676,9 @@ Default: `False`
 
 <details>
 <summary>
-### [`environment`](/docs/api/qiskit-ibm-runtime/options-sampler-options#environment)
+### `environment`
 </summary>
+[`environment` API documentation](/docs/api/qiskit-ibm-runtime/options-sampler-options#environment)
 <details>
 <summary>
 #### `environment.callback`
@@ -695,8 +724,9 @@ List of tags.
 
 <details>
 <summary>
-### [`execution`](/docs/api/qiskit-ibm-runtime/options-sampler-options#execution)
+### `execution`
 </summary>
+[`execution` API documentation](/docs/api/qiskit-ibm-runtime/options-sampler-options#execution)
 <details>
 <summary>
 #### `execution.init_qubits`
@@ -730,18 +760,22 @@ The delay between a measurement and the subsequent quantum circuit.
 
 <details>
 <summary>
-### [`max_execution_time`](/docs/api/qiskit-ibm-runtime/options-sampler-options#max_execution_time)
+### `max_execution_time`
 </summary>
 **Choices**: Integer number of seconds in the range [1, 10800]
 **Default**: 10800 (3 hours)
+
+[`max_execution_time` API documentation](/docs/api/qiskit-ibm-runtime/options-sampler-options#max_execution_time)
 </details>
 
 <details>
 <summary>
-### [`simulator`](/docs/api/qiskit-ibm-runtime/options-simulator-options)
+### `simulator`
 </summary>
 
 Options to pass when simulating a backend
+
+[`simulator` API documentation](/docs/api/qiskit-ibm-runtime/options-simulator-options)
 <details>
 <summary>
 #### `simulator.basis_gates`
@@ -787,10 +821,12 @@ Options to pass when simulating a backend
 
 <details>
 <summary>
-### [`twirling`](/docs/api/qiskit-ibm-runtime/options-twirling-options)
+### `twirling`
 </summary>
 
 Twirling options
+
+[`twirling` API documentation](/docs/api/qiskit-ibm-runtime/options-twirling-options)
 <details>
 <summary>
 #### `twirling.enable_gates`
