Updated protein on lattice fig to edit out stray marks.

--- a/learning/courses/quantum-computing-in-practice/mapping.ipynb
+++ b/learning/courses/quantum-computing-in-practice/mapping.ipynb
@@ -80,7 +80,7 @@
     "\n",
     "The protein chain is represented as a series of turns or directions on this lattice. Each turn between amino acids can be in one of four directions, corresponding to edges of the tetrahedron. These four possible turns are encoded using four qubits into the states `0001`, `0010`, `0100`, or `1000`.\n",
     "\n",
-    "![Amino acid chain on a tetrahedral lattice](/learning/images/courses/quantum-computing-in-practice/coming-soon-mapping/10.3.avif)\n",
+    "![Amino acid chain on a tetrahedral lattice](/learning/images/courses/quantum-computing-in-practice/coming-soon-mapping/protein-tetra.avif)\n",
     "\n",
     "Let’s look at an example in the figure above. Let’s place our first amino acid on the point labelled “B” circled in red in our tetrahedral lattice. The direction to the first amino acid to the second is arbitrary because the system can always be rotated to make that edge point in any direction we like. So, we can place our second amino acid on the point below the first labelled “A”. It’s not as easy to see, but the path from the second to the third is also arbitrary. All three choices would result in our having two edges with an angle of approximately 109.5 degrees between them. Picking this second edge simply determines the orientation of our protein in space. So, without loss of generality, we can choose the first two turns to just be`0001` and `0010`.\n",
     "\n",
