change to admoniton

--- a/docs/tutorials/real-time-benchmarking-for-qubit-selection.ipynb
+++ b/docs/tutorials/real-time-benchmarking-for-qubit-selection.ipynb
@@ -732,9 +732,9 @@
    "id": "cd81b208-b13b-4988-854e-1741408f36f3",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Call to Action:</b> Try to apply this method to your executions and determine how much of a benefit you get! You can also try and see how much improvements you get from different backends.\n",
-    "</div>"
+    "<Admonition type=\"note\" title=\"Call to action\">\n",
+    "Try to apply this method to your executions and determine how much of a benefit you get! You can also try and see how much improvements you get from different backends.\n",
+    "</Admonition>"
    ]
   },
   {
