--- a/docs/tutorials/quantum-approximate-optimization-algorithm.ipynb
+++ b/docs/tutorials/quantum-approximate-optimization-algorithm.ipynb
@@ -44,8 +44,7 @@
     "\n",
     "Before starting this tutorial, be sure you have the following installed:\n",
     "- Qiskit SDK v1.0 or later, with visualization support ( `pip install 'qiskit[visualization]'` )\n",
-    "- Qiskit Runtime 0.22 or later (`pip install qiskit-ibm-runtime`)\n",
-    "- Rustworkx graph library (`pip install rustworkx`)"
+    "- Qiskit Runtime 0.22 or later (`pip install qiskit-ibm-runtime`)"
    ]
   },
   {
@@ -58,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "37b3acfc",
    "metadata": {},
    "outputs": [],
@@ -123,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "6ced6bea",
    "metadata": {},
    "outputs": [
@@ -587,17 +586,7 @@
    "execution_count": 10,
    "id": "e14ecc92",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Image src=\"/docs/images/tutorials/quantum-approximate-optimization-algorithm/extracted-outputs/e14ecc92-0.avif\" alt=\"Output of the previous code cell\" />"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "plt.figure(figsize=(12, 6))\n",
     "plt.plot(objective_func_vals)\n",
@@ -764,17 +753,7 @@
    "execution_count": 15,
    "id": "33135970-8bc4-4fb2-ab87-08726a432ce4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Image src=\"/docs/images/tutorials/quantum-approximate-optimization-algorithm/extracted-outputs/33135970-8bc4-4fb2-ab87-08726a432ce4-0.avif\" alt=\"Output of the previous code cell\" />"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# auxiliary function to plot graphs\n",
     "def plot_result(G, x):\n",
@@ -801,15 +780,7 @@
    "execution_count": 16,
    "id": "2f6a73c4-f5ae-4647-a0dd-d77a13f66388",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The value of the cut is: 5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def evaluate_sample(x: Sequence[int], graph: rx.PyGraph) -> float:\n",
     "    assert len(x) == len(\n",
@@ -840,17 +811,7 @@
    "execution_count": 17,
    "id": "590fe2ce",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Image src=\"/docs/images/tutorials/quantum-approximate-optimization-algorithm/extracted-outputs/590fe2ce-0.avif\" alt=\"Output of the previous code cell\" />"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = 100  # Number of nodes in graph\n",
     "graph_100 = rx.PyGraph()\n",
@@ -1144,17 +1105,7 @@
    "execution_count": 24,
    "id": "0fda3611",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Image src=\"/docs/images/tutorials/quantum-approximate-optimization-algorithm/extracted-outputs/0fda3611-0.avif\" alt=\"Output of the previous code cell\" />"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "plt.figure(figsize=(12, 6))\n",
     "plt.plot(objective_func_vals)\n",
@@ -1245,17 +1196,7 @@
    "execution_count": 26,
    "id": "b4a25e28",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Image src=\"/docs/images/tutorials/quantum-approximate-optimization-algorithm/extracted-outputs/b4a25e28-0.avif\" alt=\"Output of the previous code cell\" />"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "plot_result(graph_100, best_sol_bitstring_100)"
    ]
@@ -1361,17 +1302,7 @@
    "execution_count": 30,
    "id": "4381a2b3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Image src=\"/docs/images/tutorials/quantum-approximate-optimization-algorithm/extracted-outputs/4381a2b3-0.avif\" alt=\"Output of the previous code cell\" />"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(8, 6))\n",
     "plot_cdf(result_dist, ax, \"Eagle device\")"
