--- a/learning/courses/variational-algorithm-design/cost-functions.ipynb
+++ b/learning/courses/variational-algorithm-design/cost-functions.ipynb
@@ -678,7 +678,7 @@
     "    operational=True, min_num_qubits=ansatz.num_qubits, simulator=False\n",
     ")\n",
     "# Or get a specific backend:\n",
-    "# backend = service.backend(\"ibm_cusco\")\n",
+    "# backend = service.backend(\"ibm_brisbane\")\n",
     "\n",
     "# Use a pass manager to transpile the circuit and observable for the specific backend being used:\n",
     "\n",
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "389b7e86-cd61-4184-96c3-ae91b8ad59f5",
    "metadata": {},
    "outputs": [
@@ -976,7 +976,7 @@
     ")\n",
     "\n",
     "# Or get a specific backend:\n",
-    "# backend = service.backend(\"ibm_cusco\")\n",
+    "# backend = service.backend(\"ibm_brisbane\")\n",
     "\n",
     "# Use a pass manager to transpile the circuit and observable for the specific backend being used:\n",
     "\n",
@@ -1119,12 +1119,12 @@
    "id": "ca040383-9c8c-4a38-8e40-bad1b26c6085",
    "metadata": {},
    "source": [
-    "We can use a simulator to show the usefulness of an optimized transpilation. We will return below to using real hardware to demonstrate the usefulness of error mitigation. We will use QiskitRuntimeService to get a real backend (in this case, ibm_sherbrooke), and use AerSimulator to simulate that backend, including its noise behavior."
+    "We can use a simulator to show the usefulness of an optimized transpilation. We will return below to using real hardware to demonstrate the usefulness of error mitigation. We will use QiskitRuntimeService to get a real backend (in this case, ibm_brisbane), and use AerSimulator to simulate that backend, including its noise behavior."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "6f0e6f32-02f7-471f-a9f3-f30d22f8cca4",
    "metadata": {},
    "outputs": [],
@@ -1134,7 +1134,7 @@
     "\n",
     "# get a real backend from the runtime service\n",
     "service = QiskitRuntimeService()\n",
-    "backend = service.backend(\"ibm_sherbrooke\")\n",
+    "backend = service.backend(\"ibm_brisbane\")\n",
     "\n",
     "# generate a simulator that mimics the real quantum system with the latest calibration results\n",
     "backend_sim = AerSimulator.from_backend(backend)"
@@ -1328,7 +1328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Estimated usage: 8 minutes, benchmarked on ibm_sherbrooke, 5-23-24\n",
+    "# Estimated usage: 8 minutes, benchmarked on an Eagle processor, 5-23-24\n",
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "from qiskit_ibm_runtime import (\n",
@@ -1345,7 +1345,7 @@
     "# )\n",
     "\n",
     "# Or use a specific backend\n",
-    "backend = service.backend(\"ibm_cusco\")\n",
+    "backend = service.backend(\"ibm_brisbane\")\n",
     "\n",
     "# Initialize some variables to save the results from different runs:\n",
     "\n",
