--- a/learning/courses/variational-algorithm-design/examples-and-applications.ipynb
+++ b/learning/courses/variational-algorithm-design/examples-and-applications.ipynb
@@ -1290,7 +1290,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<IBMBackend('ibm_cusco')>\n"
+      "<IBMBackend('ibm_brisbane')>\n"
      ]
     }
    ],
@@ -1304,7 +1304,7 @@
     "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(operational=True, simulator=False)\n",
     "# Or use a specific backend\n",
-    "# backend = service.backend(\"ibm_cusco\")\n",
+    "# backend = service.backend(\"ibm_brisbane\")\n",
     "print(backend)"
    ]
   },
@@ -1345,7 +1345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Estimated compute resource usage: 25 minutes. Benchmarked at 24 min, 30 s on ibm_nazca on 5-30-24\n",
+    "# Estimated compute resource usage: 25 minutes. Benchmarked at 24 min, 30 sec on an Eagle r3 processor on 5-30-24\n",
     "\n",
     "k = 2\n",
     "betas = [30, 50, 80]\n",
@@ -1788,7 +1788,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Estimated hardware usage: 20 min benchmarked on ibm_nazca on 5-30-24\n",
+    "# Estimated hardware usage: 20 min benchmarked on an Eagle r3 processor on 5-30-24\n",
     "\n",
     "real_prev_states = []\n",
     "real_prev_opt_parameters = []\n",
