--- a/docs/tutorials/quantum-kernel-training.ipynb
+++ b/docs/tutorials/quantum-kernel-training.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Quantum kernel training\n",
-    "*Usage estimate: under one minute on ibm_nazca (NOTE: This is an estimate only. Your runtime might vary.)*"
+    "*Usage estimate: under one minute on an Eagle r3 processor (NOTE: This is an estimate only. Your runtime might vary.)*"
    ]
   },
   {
