--- a/learning/courses/quantum-machine-learning/qvc-qnn.ipynb
+++ b/learning/courses/quantum-machine-learning/qvc-qnn.ipynb
@@ -566,7 +566,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ibm_sherbrooke\n"
+      "ibm_brisbane\n"
      ]
     }
    ],
@@ -1575,7 +1575,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ibm_nazca\n"
+      "ibm_brisbane\n"
      ]
     }
    ],
@@ -1585,7 +1585,7 @@
     "# To run on hardware, select the least busy quantum computer or specify a particular one.\n",
     "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(operational=True, simulator=False)\n",
-    "# backend = service.backend(\"ibm_kyoto\")\n",
+    "# backend = service.backend(\"ibm_brisbaneane\")\n",
     "\n",
     "print(backend.name)"
    ]
@@ -1729,7 +1729,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This was run on ibm_nazca on 10-4-24, and took 7 min.\n",
+    "# This was run on an Eagle r3 processor on 10-4-24, and took 7 min.\n",
     "\n",
     "from qiskit_ibm_runtime import EstimatorV2 as Estimator, Session\n",
     "\n",
