--- a/docs/tutorials/repetition-codes.ipynb
+++ b/docs/tutorials/repetition-codes.ipynb
@@ -31,8 +31,8 @@
     "\n",
     "Before starting this tutorial, ensure that you have the following installed:\n",
     "\n",
-    "- Qiskit SDK 1.0 or later with visualization support (`pip install qiskit[visualization]`)\n",
-    "- Qiskit Runtime 0.22 or later (`pip install qiskit-ibm-runtime`)"
+    "- Qiskit SDK 2.0 or later with visualization support (`pip install qiskit[visualization]`)\n",
+    "- Qiskit Runtime 0.40 or later (`pip install qiskit-ibm-runtime`)"
    ]
   },
   {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "606dff18",
    "metadata": {},
    "outputs": [],
@@ -152,9 +152,9 @@
     "    circuit.cx(qreg_data[2], qreg_measure[1])\n",
     "    circuit.barrier(*qreg_data, *qreg_measure)\n",
     "    circuit.measure(qreg_measure, creg_measure)\n",
-    "    with circuit.if_test((creg_syndrome[0], 1)):\n",
+    "    with circuit.if_test((creg_measure[0], 1)):\n",
     "        circuit.x(qreg_measure[0])\n",
-    "    with circuit.if_test((creg_syndrome[1], 1)):\n",
+    "    with circuit.if_test((creg_measure[1], 1)):\n",
     "        circuit.x(qreg_measure[1])\n",
     "    circuit.barrier(*qreg_data, *qreg_measure)\n",
     "    return circuit\n",
@@ -490,7 +490,7 @@
   "celltoolbar": "Slideshow",
   "description": "This tutorial demonstrates how to build basic repetition codes using IBM dynamic circuits, an example of basic quantum error correction (QEC).",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "documentation",
    "language": "python",
    "name": "python3"
   },
@@ -504,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.10.16"
   },
   "title": "Repetition codes"
  },
