--- a/docs/guides/access-instances-platform-apis.mdx
+++ b/docs/guides/access-instances-platform-apis.mdx
@@ -36,4 +36,4 @@ In the response when provisioning or when getting the details of an instance:
 
 - **instance_limit_seconds** (integer or null, `>= 0`): The limit to set on the instance.
 - **usage_allocation_seconds** (integer or null, `>= 0`): Allotted time for the instance, used by the fair-share scheduler to determine the priority in the queue, based on usage of all QPUs.
-- **backends** (Required; array of list of backends (strings) or array with "ANY" (strings)): the allow-list of names of backends that are available to this instance. Default: `["ANY"]`, means all backends. `[]` means no backends.
+- **backends** (Required; array of list of backends (strings) or array with "ANY" (strings)): the allow-list of names of backends that are available to this instance. Default: `["ANY"]`, means all backends available on this plan. `[]` means no backends.
