added instance and pip installs to another module.

--- a/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
@@ -20,11 +20,23 @@
     "- `qiskit-ibm-runtime` v0.40.1 or newer\n",
     "- `qiskit-aer` v0.17.0 or newer\n",
     "- `qiskit.visualization`\n",
+    "- `numpy`\n",
+    "- `pylatexenc`\n",
     "\n",
     "To set up and install the packages above, see the [Install Qiskit](/docs/guides/install-qiskit) guide.\n",
     "In order to run jobs on real quantum computers, students will need to set up an account with IBM Quantum&reg; by following the steps in the [Set up your IBM Cloud account](/docs/guides/cloud-setup) guide.\n",
     "\n",
     "This module was tested and used 12 seconds of QPU time. This is an estimate only. Your actual usage may vary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Uncomment and modify this line as needed to install dependencies\n",
+    "#!pip install 'qiskit>=2.1.0' 'qiskit-ibm-runtime>=0.40.1' 'qiskit-aer>=0.17.0' 'numpy' 'pylatexenc'"
    ]
   },
   {
@@ -952,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "97232ee2-a79e-4cb8-9c1e-cdc2b121827c",
    "metadata": {},
    "outputs": [],
@@ -960,7 +972,7 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "# Syntax for first saving your token\n",
-    "# QiskitRuntimeService.save_account(channel=\"ibm_quantum\", token=\"<MY_IBM_QUANTUM_TOKEN>\", overwrite=True, set_as_default=True)\n",
+    "# QiskitRuntimeService.save_account(channel='ibm_quantum_platform', instance = '<MY_IBM_INSTANCE_CRN>', token='<MY_IBM_QUANTUM_TOKEN>', overwrite=True, set_as_default=True)\n",
     "# service = QiskitRuntimeService(channel='ibm_quantum_platform')\n",
     "\n",
     "# Load saved credentials\n",
